--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -33,7 +33,7 @@
                             <div class="panel-body">
                                 <form role="form">
                                     <div class="form-group">
-                                        <label for="Q1"><p><h3>Question 1</h3><h4>Your mind is always buzzing with unexplored ideas and plans.</h4></p></label>
+                                        <label for="Q1"><p><h3>Question 1</h3><h4>Swimming in the ocean is better than swimming in a public pool.</h4></p></label>
                                         <select id="q1" class="custom-select">
                                             <option value ="0" selected>Select an Option</option>
                                             <option value="1">1 (Strongly Agree)</option>
@@ -44,7 +44,7 @@
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <label for="Q2"><p><h3>Question 2</h3><h4>Your mind is always buzzing with unexplored ideas and plans.</h4></p></label>
+                                        <label for="Q2"><p><h3>Question 2</h3><h4>It is OK to lie in order to protect someone's feelings.</h4></p></label>
                                         <select id="q2" class="custom-select">
                                             <option value ="0" selected>Select an Option</option>
                                             <option value="1">1 (Strongly Agree)</option>
@@ -55,7 +55,7 @@
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <label for="Q3"><p><h3>Question 3</h3><h4>Your mind is always buzzing with unexplored ideas and plans.</h4></p></label>
+                                        <label for="Q3"><p><h3>Question 3</h3><h4>Myspace was better than Facebook.</h4></p></label>
                                         <select id="q3" class="custom-select">
                                             <option value ="0" selected>Select an Option</option>
                                             <option value="1">1 (Strongly Agree)</option>
@@ -66,7 +66,7 @@
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <label for="Q4"><p><h3>Question 4</h3><h4>Your mind is always buzzing with unexplored ideas and plans.</h4></p></label>
+                                        <label for="Q4"><p><h3>Question 4</h3><h4>Smoking should be banned worldwide</h4></p></label>
                                         <select id="q4" class="custom-select">
                                             <option value ="0" selected>Select an Option</option>
                                             <option value="1">1 (Strongly Agree)</option>
@@ -77,7 +77,7 @@
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <label for="Q5"><p><h3>Question 5</h3><h4>Your mind is always buzzing with unexplored ideas and plans.</h4></p></label>
+                                        <label for="Q5"><p><h3>Question 5</h3><h4>We do not really need religion</h4></p></label>
                                         <select id="q5" class="custom-select">
                                             <option value ="0" selected>Select an Option</option>
                                             <option value="1">1 (Strongly Agree)</option>
@@ -88,7 +88,7 @@
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <label for="Q6"><p><h3>Question 6</h3><h4>Your mind is always buzzing with unexplored ideas and plans.</h4></p></label>
+                                        <label for="Q6"><p><h3>Question 6</h3><h4>You enjoy having a wide circle of acquaintances</h4></p></label>
                                         <select id="q6" class="custom-select">
                                             <option value ="0" selected>Select an Option</option>
                                             <option value="1">1 (Strongly Agree)</option>
@@ -99,7 +99,7 @@
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <label for="Q7"><p><h3>Question 7</h3><h4>Your mind is always buzzing with unexplored ideas and plans.</h4></p></label>
+                                        <label for="Q7"><p><h3>Question 7</h3><h4>You feel that the world is founded on compassion</h4></p></label>
                                         <select id="q7" class="custom-select">
                                             <option value ="0" selected>Select an Option</option>
                                             <option value="1">1 (Strongly Agree)</option>
@@ -110,7 +110,7 @@
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <label for="Q8"><p><h3>Question 8</h3><h4>Your mind is always buzzing with unexplored ideas and plans.</h4></p></label>
+                                        <label for="Q8"><p><h3>Question 8</h3><h4>You believe the best decision is one which can be easily changed.</h4></p></label>
                                         <select id="q8" class="custom-select">
                                             <option value ="0" selected>Select an Option</option>
                                             <option value="1">1 (Strongly Agree)</option>
@@ -121,7 +121,7 @@
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <label for="Q9"><p><h3>Question 9</h3><h4>Your mind is always buzzing with unexplored ideas and plans.</h4></p></label>
+                                        <label for="Q9"><p><h3>Question 9</h3><h4>You trust reason rather than feelings.</h4></p></label>
                                         <select id="q9" class="custom-select">
                                             <option value ="0" selected>Select an Option</option>
                                             <option value="1">1 (Strongly Agree)</option>
@@ -132,7 +132,7 @@
                                         </select>
                                     </div>
                                     <div class="form-group">
-                                        <label for="Q10"><p><h3>Question 10</h3><h4>Your mind is always buzzing with unexplored ideas and plans.</h4></p></label>
+                                        <label for="Q10"><p><h3>Question 10</h3><h4>You are a person somewhat reserved and distant in communication.</h4></p></label>
                                         <select id="q10" class="custom-select">
                                             <option value="0" selected>Select an Option</option>
                                             <option value="1">1 (Strongly Agree)</option>
