--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -24,7 +24,7 @@
                                     <input type="text" class="form-control" id="friendName">
                                 </div>
                                 <div class="form-group">
-                                    <label for="friendSocial"><h4>Link to Social Media(Required)</h4></label>
+                                    <label for="friendSocial"><h4>Link to Photo(Required)</h4></label>
                                     <input type="text" class="form-control" id="friendLink">
                                 </div>
                             </form>
