--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,14 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>HOME FriendFinder</title>
+        <link rel="stylesheet"  type="text/css" href="../../css/reset.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="../../css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Alfa+Slab+One" rel="stylesheet">
+        
     </head>
     <body>
         <div class="container">
-            <div class="jumbotron bg-warning">
-                <h1 class="display-3 text-center">Friend Finder</h1>
-                <p class="lead text-left">Answer a few basic questions. </br> Then find the friend with the greatest compatibility! </p>
+            <div id="banner"class="jumbotron bg-warning">
+                <h1 id="mainHeading"class="display-3 text-center">Friend Finder</h1>
+                <p id="subMain" class="lead text-left">Answer a few basic questions. </br> Then find the friend with the greatest compatibility! </p>
                 <a href="/survey"><button type="button" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-list-alt"></span> Take Survery</button></a>
             </div>
             <p><a href="/api/friends">API Friend List</a> | <a href="https://github.com/perlaballesteros/FriendFinder">GITHub Repo</a></p>
