added css to home html

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>HOME FriendFinder</title>
-        <link rel="stylesheet"  type="text/css" href="../../css/reset.css">
+        <link rel="stylesheet"  type="text/css" href="/css/reset.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="../../css/style.css">
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Alfa+Slab+One" rel="stylesheet">
         
     </head>
